#121 식단 조회 API 원복구
- 프론트 요구사항 반영으로 복구하였습니다.